--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,12 @@ server.port=8081
 # DB Configuration
 
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/microservice
-spring.datasource.username=Lzg
-spring.datasource.password=Lzg2022304041
+spring.datasource.url=jdbc:mysql://10.68.162.106:3306/microservice
+#spring.datasource.username=microservice
+#spring.datasource.password=3nDCFWiGispHjf5R
+spring.datasource.username=root
+spring.datasource.password=Lzg20040303
+
 
 # Logging
 
